# ia_helper

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  RELEASING.md  REQUIREMENTS.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
build-aux/flathub/: io.github.stargazernz.IAHelper.json
build-aux/flatpak/: io.github.stargazernz.IAHelper.json  python3-internetarchive.json  update-python-deps.py
build-aux/windows/: build.sh  ia-helper.spec  installer.iss  installer.nsi  launcher.py
data/: io.github.stargazernz.IAHelper.desktop  io.github.stargazernz.IAHelper.metainfo.xml
debian/: changelog  control  copyright  install  rules
ia_helper/: __init__.py  main.py
ia_helper/core/: __init__.py  account.py  api.py  bulk.py  config.py  downloads.py  items.py  scrape.py  search.py  thumbnails.py
ia_helper/ui/: __init__.py  bulk_dialog.py  downloads_view.py  format.py  item_view.py  search_view.py  settings.py  window.py  worker.py
tests/: test_account.py  test_bulk.py  test_config.py  test_downloads.py  test_items.py  test_scrape.py  test_search.py  test_thumbnails.py
