[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-helper"
version = "0.6.1"
description = "A GTK4 helper application for searching and downloading from the Internet Archive"
readme = "README.md"
requires-python = ">=3.10"
# PyGObject is intentionally NOT listed here: it comes from the system
# (python3-gi on Debian/Ubuntu) or the Flatpak GNOME runtime. Installing it
# from pip forces a source build and fights the distro packages.
dependencies = [
    "internetarchive>=4.1",
]

[project.scripts]
ia-helper = "ia_helper.main:main"

[tool.setuptools.packages.find]
include = ["ia_helper*"]
